做了一些更改

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,15 @@ services:
     image: windy007008/web_tt_ss_n:latest
     ports:
       - "5003:5003"  
+    volumes:
+      - ./user_data:/app/user_data
+      - ./cache:/app/cache
+      - ./backup.json:/app/backup.json
     environment:
       - HTTP_PROXY=http://host.docker.internal:10809
       - HTTPS_PROXY=http://host.docker.internal:10809
       - http_proxy=http://host.docker.internal:10809
       - https_proxy=http://host.docker.internal:10809
-
       - FLASK_ENV=development  # 标记为开发环境
     restart: always
     user: "1000:1000"  # 使用宿主机的UID:GID
