--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,15 +6,19 @@ services:
     restart: always
     ports:
       - "5003:5003"
+    volumes:
+      - ./user_data:/app/user_data
+      - ./cache:/app/cache
+      - ./backup.json:/app/backup.json
+      # - /etc/letsencrypt/live/windy.run/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
+      # - /etc/letsencrypt/live/windy.run/privkey.pem:/etc/ssl/certs/privkey.pem:ro
+   
     environment:
       - HTTP_PROXY=http://host.docker.internal:10809
       - HTTPS_PROXY=http://host.docker.internal:10809
       - http_proxy=http://host.docker.internal:10809
       - https_proxy=http://host.docker.internal:10809
       - FLASK_ENV=production
-    volumes:
-      - /etc/letsencrypt/live/windy.run/fullchain.pem:/etc/ssl/certs/fullchain.pem:ro
-      - /etc/letsencrypt/live/windy.run/privkey.pem:/etc/ssl/certs/privkey.pem:ro
     user: "1000:1000"  # 使用宿主机的UID:GID
     command: ["gunicorn", 
               "--workers", "4",
